--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   quick_actions: ^1.0.5
   image_picker: ^1.0.0
   photo_manager: ^2.6.0
+  google_mlkit_text_recognition: ^0.8.1
 
 dev_dependencies:
   flutter_test:
