--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.5 <4.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -39,6 +39,7 @@ dependencies:
   image_picker: ^1.0.0
   photo_manager: ^2.6.0
   google_mlkit_text_recognition: ^0.8.1
+  flutter_siri_suggestions: ^2.1.0
 
 dev_dependencies:
   flutter_test:
