--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   photo_manager: ^2.6.0
   google_mlkit_text_recognition: ^0.8.1
   flutter_siri_suggestions: ^2.1.0
+  share_plus: ^7.0.2
 
 dev_dependencies:
   flutter_test:
