--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_mlkit_text_recognition: ^0.8.1
   flutter_siri_suggestions: ^2.1.0
   share_plus: ^7.0.2
+  mime: ^1.0.4
 
 dev_dependencies:
   flutter_test:
